<?xml version="1.0"?>
<package format="3">
  <name>balance_controller_ros2</name>
  <version>0.1.0</version>
  <description>平衡自行车控制器：串级 PID 动态零点、舵机转向与 ODrive 串口驱动。</description>

  <maintainer email="user@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>servo_rs485_ros2</depend>
  <depend>ament_index_cpp</depend>
  <depend>tf2</depend>
  <depend>yaml-cpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>